syntax = "proto3";

package services.roommate.api;

import "base/types/date_time.proto";
import "google/api/annotations.proto";
import "services/roommate/api/roommate_model.proto";

service RoommateService {
  // Adds a new roomate to consider in the home search
  rpc AddRoommate(AddRoommateRequest) returns (AddRoommateResponse) {
    option (google.api.http) = {
      post: "/addRoommate"
      body: "*"
    };
  }

  // Makes a change to a roomate, such as adding or removing them from a group
  // or updating their personal details
  rpc UpdateRoommate(UpdateRoommateRequest) returns (UpdateRoommateResponse) {
    option (google.api.http) = {
      post: "/updateRoommate"
      body: "*"
    };
  }

  // Deletes a roommate from the system. Their data will be deleted and will no
  // longer be considered for commute calculations or optimization calculations
  rpc RetireRoommate(RetireRoommateRequest) returns (RetireRoommateResponse) {
    option (google.api.http) = {
      post: "/retireRoommate"
      body: "*"
    };
  }

  // Creates a group for roommates to join
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse) {
    option (google.api.http) = {
      post: "/createGroup"
      body: "*"
    };
  }

  rpc JoinGroup(JoinGroupRequest) returns (JoinGroupResponse) {
    option (google.api.http) = {
      post: "/joinGroup"
      body: "*"
    };
  }
}

message AddRoommateRequest {
  Roommate roommate = 1;
}

message AddRoommateResponse {
  string roommate_id = 1;
}

message UpdateRoommateRequest {
  repeated UpdateAction actions = 1;
}

message UpdateRoommateResponse {
  Roommate roommate = 1;
}

message RetireRoommateRequest {
  string roommate_id = 1;
}

message RetireRoommateResponse {
  Roommate roommate = 1;
}

message CreateGroupRequest {
  string creator_roommate_id = 1;
  string group_name = 2;
  string group_description = 3;
  base.types.Date expected_move_in_date = 4;
}

message CreateGroupResponse {
  string join_url = 2;
}

message JoinGroupRequest {
  string group_id = 1;
}

message JoinGroupResponse {
  string status = 1;
}
